--- a/doc/man/clashic-qt.1
+++ b/doc/man/clashic-qt.1
@@ -3,10 +3,10 @@
 .SH NAME
 clashic-qt \- manual page for clashic-qt v0.14.0.0
 .SH DESCRIPTION
-Bitcoin Core version v0.14.0.0\-dirty (64\-bit)
+Bitcoin ABCD version v0.14.0.0\-dirty (64\-bit)
 Usage:
 .IP
-bitcoin\-qt [command\-line options]
+clashic\-qt [command\-line options]
 .SH OPTIONS
 .HP
 \-?
@@ -38,7 +38,7 @@ testnet:
 .HP
 \fB\-conf=\fR<file>
 .IP
-Specify configuration file (default: bitcoin.conf)
+Specify configuration file (default: clashic.conf)
 .HP
 \fB\-datadir=\fR<dir>
 .IP
@@ -77,7 +77,7 @@ leave that many cores free, default: 0)
 .HP
 \fB\-pid=\fR<file>
 .IP
-Specify pid file (default: bitcoind.pid)
+Specify pid file (default: clashicd.pid)
 .HP
 \fB\-prune=\fR<n>
 .IP
