--- a/doc/man/clashic-tx.1
+++ b/doc/man/clashic-tx.1
@@ -109,9 +109,9 @@ Set register NAME to given JSON\-STRING
 .SH COPYRIGHT
 Copyright (C) 2009-2017 The Bitcoin Core developers
 
-Please contribute if you find Bitcoin Clashic useful. Visit
-<http://bitcoinclashic.org> for further information about the software.
-The source code is available from <https://github.com/Bitcoin-Clashic/bitcoin-clashic>.
+Please contribute if you find Bitcoin Core Sq useful. Visit
+<https://thebitcoincore.org> for further information about the software.
+The source code is available from <https://github.com/bitcoin-cored/bitcoin-cored>.
 
 This is experimental software.
 Distributed under the MIT software license, see the accompanying file COPYING
